Update para a versão 7.0, Ajustes na View e Adicição do InMemoryDatabase para facil utilização em qualquer máquina

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Produto" asp-action="Index">PRODUTOSTORE</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Produtos" asp-action="Index">PRODUTOSTORE</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - PRODUTOSTORE - <a asp-area="" asp-controller="Produto" asp-action="Index">Produto</a>
+            &copy; 2022 - PRODUTOSTORE - <a asp-area="" asp-controller="Produtos" asp-action="Index">Produto</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
