--- a/Views/Produtos/Index.cshtml
+++ b/Views/Produtos/Index.cshtml
@@ -9,36 +9,36 @@
 <br>
 <br>
 
-<div class="row">
+<div class="form-row">
     <div class="col-md-4">
-        <form asp-action="CreateOuEdit">
+        <form class="col" asp-action="CreateOuEdit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
+            <div class="form-group col">
+                <label asp-for="Nome" class="control-label col-lg-1"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
-            <div class="form-group">
+                <div class="form-group col">
                 <label asp-for="Descricao" class="control-label"></label>
                 <input asp-for="Descricao" class="form-control" />
                 <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
+            <div class="col form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="Ativo" /> @Html.DisplayNameFor(model => model.Ativo)
                 </label>
             </div>
-            <div class="form-group form-check">
+            <div class="col form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="Perecivel" /> @Html.DisplayNameFor(model => model.Perecivel)
                 </label>
             </div>
-            <div class="form-group">
+            <div class="col">
                 <label asp-for="CategoriaID" class="control-label"></label>
                 <select asp-for="CategoriaID" class="form-control" asp-items="@(new SelectList(Model.Categorias, "Id","Nome"))"></select>
             </div>
-            <div class="form-group">
+            <div class="col">
                 <input type="submit" value="Cadastrar" class="btn btn-primary" />
             </div>
         </form>
